--- a/Hair/style.css
+++ b/Hair/style.css
@@ -1,4 +1,4 @@
-/* .main {
+.main {
     font-family:Arial;
     width:500px;
     display:block;
@@ -13,7 +13,7 @@
       padding: 2%;
       position: relative;
       text-align: center;
-  } */
+  }
  
   .arrow_right , .arrow_left{
     width: 50px;
